REGRESSION(r184420): [GTK] webkit_dom_html_element_get_children has been removed https://bugs.webkit.org/show_bug.cgi?id=145174

Reviewed by Philippe Normand.

children property has been moved to Element, Document and
DocumentFragment to match the spec, so we need to expose the new
get_children and bring back webkit_dom_html_element_get_children()
as deprecated.

* bindings/gobject/WebKitDOMDeprecated.cpp:
(webkit_dom_html_element_get_children):
* bindings/gobject/WebKitDOMDeprecated.h:
* bindings/gobject/WebKitDOMDeprecated.symbols:
* bindings/gobject/webkitdom.symbols:

Canonical link: https://commits.webkit.org/163212@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@184623 268f45cc-cd09-0410-ab3c-d52691b4dbfc